[package]
name = "bevy-gotrue"
version = "0.2.0"
edition = "2021"
description = "supabase auth for bevy apps"
repository = "https://github.com/bytemunch/bevy-gotrue"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/bytemunch/bevy-gotrue"
readme = "README.md"

[dependencies]
bevy = "0.15.0"
ehttp = "0.5.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
bevy_http_client = "0.7"
